# URL-shortener

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_urls_table.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  health.py  urls.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  redis.py
app/models/: __init__.py  url.py
app/repositories/: __init__.py  url_repository.py
app/schemas/: __init__.py  url.py
app/services/: __init__.py  shortener.py  url_service.py
app/utils/: __init__.py  validators.py
docs/api/: README.md
docs/architecture/: README.md
docs/database-design/: database-design.dbml  database.sql
docs/deployment/: README.md
docs/development/: README.md
tests/: __init__.py  conftest.py  test_api_validation.py  test_url_redirect.py  test_url_shortener.py
